--- a/client/src/main/html/timesheet.html
+++ b/client/src/main/html/timesheet.html
@@ -7,6 +7,11 @@
 				<a href="#{{timesheet._links.previous.href}}" class="glyphicon glyphicon-circle-arrow-left"></a>
 				Dates
 				<a href="#{{timesheet._links.next.href}}" class="glyphicon glyphicon-circle-arrow-right"></a>
+				
+				<span class="pull-right">
+					<a href="#{{timesheet._links.minus.href}}" class="glyphicon glyphicon-minus-sign"></a>
+					<a href="#{{timesheet._links.plus.href}}" class="glyphicon glyphicon-plus-sign"></a>										
+				</span>					
 			</th>
 		</tr>
 		<tr>
@@ -14,14 +19,14 @@
 		</tr>		
 	</thead>
 </table>
-	
+
 <table class="table table-bordered timesheet">
 	<tbody ng-repeat="projectRow in timesheet.projectRows">
 		<tr ng-repeat="taskRow in projectRow.taskRows">
 			<td rowspan="{{projectRow.taskRows.length}}" ng-show="$first">{{projectRow.project.name}}</td>
 			<td>{{taskRow.task.name}}</td>
 			<td ng-repeat="entryCell in taskRow.entryCells">
-				<input type="text" ng-model="entryCell.time" ui-number-mask="1"/>
+				<input type="text" ng-model="entryCell.time" ui-number-mask="1" ng-keydown="saveEntryCell($event, projectRow, taskRow, entryCell)"/>
 			</td>
 		</tr>		
 	</tbody>
