--- a/client/src/main/html/timesheet.html
+++ b/client/src/main/html/timesheet.html
@@ -1,9 +1,13 @@
-<div ng-controller="timesheetController">
+<div ng-controller="timesheetController">	
 	<table class="table table-bordered timesheet" sticky>
-		<thead>
+		<thead>			
 			<tr>
-				<th rowspan="2">Project</th>
-				<th rowspan="2">Task</th>
+				<th colspan="2">
+					<a href="#"
+					   class="glyphicon glyphicon-pushpin pull-right" 
+					   style="color: {{settingUp ? '#337ab7' : '#777'}}"
+					   ng-click="toggleSetup($event)"></a>					
+				</th>
 				<th colspan="{{timesheet.dates.length}}">
 					<a href="#{{timesheet._links.previous.href}}" class="glyphicon glyphicon-circle-arrow-left" ng-show="timesheet._links.previous"></a>
 					Dates
@@ -12,24 +16,42 @@
 					<span class="pull-right">
 						<a href="#{{timesheet._links.minus.href}}" class="glyphicon glyphicon-minus-sign" ng-show="timesheet._links.minus"></a>
 						<a href="#{{timesheet._links.plus.href}}" class="glyphicon glyphicon-plus-sign"></a>										
-					</span>					
+					</span>
 				</th>
 			</tr>
 			<tr>
+				<th rowspan="2">
+					<search-box label="Project" model="projectNameSubstring" searching="filteringProjectRow"></search-box>
+				</th>
+				<th rowspan="2">
+					<search-box label="Task" model="taskNameSubstring" searching="filteringTaskRow"></search-box>
+				</th>												
 				<th ng-repeat="date in timesheet.dates">{{date | date: "shortDate" : "+00:00"}}</th>
 			</tr>
 		</thead>
 	</table>
-	
-	<table class="table table-bordered timesheet">	
-		<tbody ng-repeat="projectRow in timesheet.projectRows">
-			<tr ng-repeat="taskRow in projectRow.taskRows">
-				<td rowspan="{{projectRow.taskRows.length}}" ng-show="$first">{{projectRow.project.name}}</td>
-				<td>{{taskRow.task.name}}</td>
+		
+	<table class="table table-bordered timesheet">			
+		<tbody ng-repeat="projectRow in timesheet.projectRows | filter: filterProjectRow">
+			<tr ng-repeat="taskRow in projectRow.taskRows | filter: filterTaskRow">
+				<td rowspan="{{projectRow.taskRows.length}}" ng-show="$first">										
+					{{projectRow.project.name}}
+					<a href="#"
+					   class="glyphicon glyphicon-pushpin pull-right" 
+					   style="color: {{projectRow.hidden ? '#777' : '#337ab7'}}; visibility: {{settingUp ? 'visible' : 'hidden'}};"
+					   ng-click="$event.preventDefault(); projectRow.hidden = !projectRow.hidden"></a>
+				</td>
+				<td>					
+					{{taskRow.task.name}}
+					<a href="#"
+					   class="glyphicon glyphicon-pushpin pull-right" 
+					   style="color: {{taskRow.hidden ? '#777' : '#337ab7'}}; visibility: {{settingUp ? 'visible' : 'hidden'}};"
+					   ng-click="$event.preventDefault(); taskRow.hidden = !taskRow.hidden"></a>					
+				</td>
 				<td ng-repeat="entryCell in taskRow.entryCells">
 					<input type="text" ng-model="entryCell.time" ui-number-mask="1" ng-keydown="saveEntryCell($event, projectRow, taskRow, entryCell)"/>
 				</td>
-			</tr>		
+			</tr>
 		</tbody>
 	</table>
 	
@@ -42,4 +64,4 @@
 			<canvas class="chart chart-pie" data="data" labels="labels"></canvas> 
 		</div>
 	</div>
-</div>	
+</div>
