Project and task filtering added

--- a/client/src/main/html/index.html
+++ b/client/src/main/html/index.html
@@ -20,7 +20,8 @@
 
 		<link rel="stylesheet" href="../../../bower_components/angular-loading-bar/build/loading-bar.min.css"/>
 		<script src="../../../bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
-
+		
+		<script src="../../../bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 		<script src="../../../bower_components/angular-i18n/angular-locale_pt-br.js"></script>
 		<script src="../../../bower_components/angular-route/angular-route.min.js"></script>		
 		<script src="../../../bower_components/angular-search-box/target/js/angular-search-box.min.js"></script>		
